--- a/login.css
+++ b/login.css
@@ -31,3 +31,8 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.links{
+  margin-top: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+}
