--- a/Mainpage_Login.css
+++ b/Mainpage_Login.css
@@ -7,3 +7,9 @@
 .list-group-item{
     background-color: #efefef;
 }
+.col-md-10 col-md-offset-3{
+    align-content: center;
+}
+.container text-center{
+    align-items: center;
+}
