id='post_title' 만들고 해당 css에 하이퍼링크, 줄 넘김시 ... 구현

--- a/css/Mainpage.css
+++ b/css/Mainpage.css
@@ -4,6 +4,13 @@
 #border_style{
     border: 1px solid #42a0e2;
 }
+
+#post_title{
+  text-overflow: ellipsis;
+  text-decoration: none;
+  color: inherit;
+}
+
 .list-group-item{
     background-color: #efefef;
 }
