--- a/css/Mainpage.css
+++ b/css/Mainpage.css
@@ -10,7 +10,10 @@
   text-decoration: none;
   color: inherit;
 }
-
+.comment_button{
+  text-decoration: none;
+  color: inherit;
+}
 .list-group-item{
     background-color: #efefef;
 }
@@ -70,3 +73,4 @@
   .file {
     display: none;
   }
+
